# weavifyy

./: README.md
.github/workflows/: publish.yml
desktop-tauri/: .gitignore
desktop-tauri/.github/workflows/: publish.yml
desktop-tauri/src/: AUTO_UPDATE_GUIDE.md  BUILD_GUIDE.md  BUILD_README.md  CUSTOMIZATION_GUIDE.md  DISCORD_RPC_SETUP.md  FILES_CHECKLIST.md  ICON_FIX.md  MODAL_SYSTEM.md  PAGE_TRANSITIONS.md  QUICK_START.md  RELEASE_NOTES_7.1.5.md  SERVERS_INTEGRATION.md  TOKEN_SETUP.md  WAVE_SHADER_SETTINGS.md  YANDEX_MUSIC_SETUP.md  artist-page.css  artist-page.js  auth-modern.css  browser-cookies-extractor.js  check-db.js  check-icon.js  check-playlists.js  convert-icon.js  cookie-parser.js  custom-background.js  customization.css  database.js  discord-rpc.js  dotify-complete.css  dotify-final.css  dotify-style.css  find-local-data.js  glassmorphism.css  index.html  install-server-deps.sh  loading-screen.css  loading-screen.js  local-server-v2.js  local-server.js  logger.js  (+36 more)
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/src/: lib.rs  main.rs
desktop-tauri/src/assets/: icon.icns
desktop-tauri/src/routes/: music.js
desktop-tauri/src/services/: ai-recommendations.js  converters.js  soundcloud.js  spotify.js  track-converter.js  unified.js  yandex.js  youtube.js
